--- a/h4_1.md
+++ b/h4_1.md
@@ -17,4 +17,11 @@ A főablak az alábbi osztályokhoz kapcsolódik közvetlenül:
 ![h4_usecase](https://user-images.githubusercontent.com/79449424/144762349-7a48ee99-a879-4ad3-9dff-e772b818a0a6.png)
 
 
+- Prekondíciók: Főablakba belépés
+- Postkondíciók: Belépési lehetőség(sikeres/nem sikeres)
+- Szokásos működés (Main Flow): Az erre kijelölt felületen ezeknek az opciók választásával juthatnak el a játékosok a játékon belül a következő ablakokba. 
+- Alternatív esetek (Alternate Flows): -
+- Kivételes esetek: Internet/szerver probléma.
+
+
 Ezt követően a bejelentkezés ablak után maga a játék következik újabb ablakokkal és rendszerekkel.
