--- a/H4.md
+++ b/H4.md
@@ -43,7 +43,9 @@ A következőkben tárgyaljuk a létrehozni kívánt alrendszer komponensek kapc
 2, Osztálydiagram
 =========
 
-<img src="analizisModell.png" width="1000">
+![Képernyőfelvétel (11)](https://user-images.githubusercontent.com/79100258/145171787-4aec4216-7e88-421c-b876-65e958d914bd.png)
+![Képernyőfelvétel (13)](https://user-images.githubusercontent.com/79100258/145171991-43bb7e8a-834f-4dc0-966c-533b52857668.png)
+
 
 <p>&nbsp;</p>
 
