--- a/H4.md
+++ b/H4.md
@@ -71,3 +71,15 @@ A következőkben tárgyaljuk a létrehozni kívánt alrendszer komponensek kapc
 </ul>
     
 <p>&nbsp;</p>
+
+2.2, Alrendszerek
+=========
+
+![Képernyőfelvétel (15)](https://user-images.githubusercontent.com/79100258/145173373-74aebcd6-4211-4570-913e-34e7d12a068a.png)
+
+Megjelenítő alrendszer: Az alkalmazás grafikus elemeinek megjelenítéséért felelős alrendszer.
+Logikai alrendszer: A játék logikájáért felelős alrendszer.
+Kommunikációs alrendszer: Az üzenetküldésért felelős alrendszer.
+Adatbázis kezelő alrendszer: A program adatbázisát kezelő alrendszer.
+
+<p>&nbsp;</p>
