--- a/H4.md
+++ b/H4.md
@@ -43,8 +43,8 @@ A következőkben tárgyaljuk a létrehozni kívánt alrendszer komponensek kapc
 2, Osztálydiagram
 =========
 
-![Képernyőfelvétel (11)](https://user-images.githubusercontent.com/79100258/145171787-4aec4216-7e88-421c-b876-65e958d914bd.png)
-![Képernyőfelvétel (13)](https://user-images.githubusercontent.com/79100258/145171991-43bb7e8a-834f-4dc0-966c-533b52857668.png)
+<img src="Images/osztálydiagram1.png" width="1000">
+<img src="Images/osztálydiagram2.png" width="1000">
 
 
 <p>&nbsp;</p>
@@ -75,11 +75,23 @@ A következőkben tárgyaljuk a létrehozni kívánt alrendszer komponensek kapc
 2.2, Alrendszerek
 =========
 
-![Képernyőfelvétel (15)](https://user-images.githubusercontent.com/79100258/145173373-74aebcd6-4211-4570-913e-34e7d12a068a.png)
+<img src="Images/alrendszerek.png" width="1000">
 
-Megjelenítő alrendszer: Az alkalmazás grafikus elemeinek megjelenítéséért felelős alrendszer.
-Logikai alrendszer: A játék logikájáért felelős alrendszer.
-Kommunikációs alrendszer: Az üzenetküldésért felelős alrendszer.
-Adatbázis kezelő alrendszer: A program adatbázisát kezelő alrendszer.
+<ul>
+  <li>Megjelenítő alrendszer: Az alkalmazás grafikus elemeinek megjelenítéséért felelős alrendszer.
+  <li>Logikai alrendszer: A játék logikájáért felelős alrendszer.
+  <li>Kommunikációs alrendszer: Az üzenetküldésért felelős alrendszer.
+  <li>Adatbázis kezelő alrendszer: A program adatbázisát kezelő alrendszer.
+</ul>
+<p>&nbsp;</p>
+
+3, Az adatbázis kezelő alrendszer modellje
+=========
+
+Ez az alrendszer felelős a játékhoz kapcsolódó összes adatbázissal kapcsolatos műveletért. Például regisztráció során ide kerülnek a megadott adatok, az alkalmazás megvételének időpontja, így a licensz is itt tárolódik el. A Support felületen küldött üzenetek adatai (küldés ideje, feladó stb.) is az adatbázisban helyezkednek el. Emellett a rangsor megjelenítése is az adatbázisból történő lekérdezés útján valósul meg.
+Az alrendszer tartalmazza tehát ezekhez a műveletekhez szükséges kapcsolatokat: RegisztraciosAblak, Rangsor, CustomizationAblak, BejelentkezesAblak osztályokkal. 
+
+Az osztályok között 1-1 kapcsolat van.
+Az adatbázist az IDBase osztály segítségével lehet elérni és kezelni.
 
 <p>&nbsp;</p>
